# flightpath

./: docker-compose.yml  pyproject.toml
containers/airflow/: Dockerfile
dags/: flightpath.py  flightpath_incremental.py
dags/include/scripts/: fetch_bts_data.py  unzip_bts_data.py
dags/include/utils/: constants.py  exceptions.py  logger.py
